tests/semantic/test_undefined.expected

[31m[Line 1] Semantic Error: Undefined cell reference: 'B99'.[0m
[36mSuggestion: Ensure this cell has a value.[0m
Compilation failed with 2 semantic error(s).
